--- a/android/robot/src/main/res/values/strings.xml
+++ b/android/robot/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
-  <string name="app_name">Andee Bot</string>
-  <string name="activity_name">Andee Bot</string>
+  <string name="app_name">Andee AI Bot</string>
+  <string name="activity_name">Andee AI Bot</string>
   <string name="description_info">Info</string>
   <string name="camera_error">This device doesn\'t support Camera2 API.</string>
   <string name="threads">Threads</string>
